Fix missing margin for selected nav item

--- a/src/styles/Header.scss
+++ b/src/styles/Header.scss
@@ -105,14 +105,6 @@
   }
 }
 
-.appNav__item--selected {
-  border-radius: 0.25rem;
-  background-color: scale-color(variables.$color-indigo, $lightness: 80%);
-  color: variables.$color-indigo;
-
-  @media screen and (min-width: variables.$device-medium) { all: unset; }
-}
-
 .appNav__link,
 .socialNav__link {
   display: block;
@@ -124,6 +116,18 @@
   @media screen and (min-width: variables.$device-medium) {
     display: inline-block;
     padding: variables.$space-xlg variables.$space-lg;
+  }
+
+  .appNav__item--selected & {
+    border-radius: 0.25rem;
+    background-color: scale-color(variables.$color-indigo, $lightness: 80%);
+    color: variables.$color-indigo;
+
+    @media screen and (min-width: variables.$device-medium) {
+      border-radius: 0;
+      background-color: unset;
+      color: unset;
+    }
   }
 }
 
